--- a/SQL_User/package.json
+++ b/SQL_User/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.0",
     "console-stamp": "^3.0.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "mssql": "^8.1.2"
