--- a/MongoBDRestaurant/package.json
+++ b/MongoBDRestaurant/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "console-stamp": "^3.0.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.0",
