--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,6 +156,24 @@ services:
         deploy:
             restart_policy:
                 condition: always
+    MongoDB_Notifications:
+        image: microservices:MongoDB_Notifications
+        build:
+            context: ./MongoDB_Notifications
+        command: node index.js 
+        environment:
+            - PORT=9086
+            - DATABASE_URL=mongodb+srv://admin:admin1@cesieats.u39giua.mongodb.net/test
+            - MAIL_ADDRESS=noreply.cesieats@gmail.com
+            - MAIL_PASSWORD=dtfsldsumearclcf
+            - TWILIO_ACCOUNT_SID=ACdcbf716b21cf55a36d98d38b5fa75fd6
+            - TWILIO_AUTH_TOKEN=734528a98451da7572af31953cd4ffc4
+            - TWILIO_NUMBER=+19894991281
+        ports:
+            - 9086:9086
+        deploy:
+            restart_policy:
+                condition: always
     MongoDB_Logs:
         image: microservices:MongoDB_Logs
         build:
